@@ -538,6 +538,7 @@ because of Phabricator reports.
   use wfMessage() or RequestContext::msg() instead.
 * Manually constructing a Language object, deprecated in 1.35, now emits
   deprecation warnings. Use LanguageFactory instead.
+* MediaWiki\Languages\Data\Names::$names is deprecated.
 * SearchEngineConfig::getConfig() has been deprecated, use DI with
   ServiceOptions to inject the required options.
 * ObjectCache::isDatabaseId() and ::getLocalClusterInstance() have been
